# AdventOfHaskell

./: LICENSE  README.md  aoc2022.cabal  day2.txt
app/: Main.hs  day1.hs  day2.hs  day3.hs  day4.hs  day5.hs  day6.hs  day7.hs
input/: day7_reduced.txt
