cabal-version:      3.0
name:               aoc2022
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Jeffrey Becca
maintainer:         jeff.becca@protonmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

-- executable aoc2022
--     import:           warnings
--     main-is:          Main.hs
--     -- other-modules:
--     -- other-extensions:
--     build-depends:    base ^>=4.17.0.0, parsec
--     hs-source-dirs:   app
--     default-language: Haskell2010
--
-- executable day2
--     import:           warnings
--     main-is:          day2.hs
--     -- other-modules:
--     -- other-extensions:
--     build-depends:    base ^>=4.17.0.0, megaparsec, text
--     hs-source-dirs:   app
--     default-language: Haskell2010

-- executable day3
--     import:           warnings
--     main-is:          day3.hs
--     -- other-modules:
--     -- other-extensions:
--     default-extensions: OverloadedStrings
--     build-depends:    base ^>=4.17.0.0, megaparsec, text
--     hs-source-dirs:   app
--     default-language: Haskell2010

-- executable day4
--     import:           warnings
--     main-is:          day4.hs
--     -- other-modules:
--     -- other-extensions:
--     default-extensions: OverloadedStrings
--     build-depends:    base ^>=4.17.0.0, megaparsec, split, hlint
--     hs-source-dirs:   app
--     default-language: Haskell2010

executable day5
    import:           warnings
    main-is:          day5.hs
    -- other-modules:
    -- other-extensions:
    default-extensions: OverloadedStrings
    build-depends:    base ^>=4.17.0.0, megaparsec, split, hlint
    hs-source-dirs:   app
    default-language: Haskell2010
