cabal-version:      3.0
name:               aoc2022
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Jeffrey Becca
maintainer:         jeff.becca@protonmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

common common-extensions
    default-extensions: OverloadedStrings

common build-directives
    build-depends:  base ^>=4.17.0.0, megaparsec, text, hlint
    default-language: Haskell2010
    hs-source-dirs: ., app
    ghc-options:    -O1
                    -Wall
executable day1
    import:           common-extensions, build-directives
    main-is:          app/day1.hs
    build-depends:    base ^>=4.17.0.0, parsec

executable day2
    import:           common-extensions, build-directives
    main-is:          app/day2.hs
    build-depends:    megaparsec, text

executable day3
    import:           common-extensions, build-directives
    main-is:          app/day3.hs
    build-depends:    megaparsec, text

executable day4
    import:           common-extensions, build-directives
    main-is:          app/day4.hs
    default-extensions: OverloadedStrings
    build-depends:    megaparsec, split, hlint

executable day5
    import:           common-extensions, build-directives
    main-is:          app/day5.hs
    build-depends:    megaparsec, split, hlint

executable day6
    import:           common-extensions, build-directives
    main-is:          app/day6.hs
    build-depends:    megaparsec, split, hlint

executable day7
    import:           common-extensions, build-directives
    main-is:          app/day7.hs
    build-depends:    containers, split
